[gd_scene load_steps=9 format=2]

[ext_resource path="res://fps.gd" type="Script" id=1]
[ext_resource path="res://pause.gd" type="Script" id=2]
[ext_resource path="res://Kenney Pixel Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Kenney Pixel.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[node name="GUI" type="CanvasLayer"]

[node name="Debug" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 54.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Debug"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 42.0
__meta__ = {
"_edit_lock_": true
}

[node name="FPS" type="Label" parent="Debug/HBoxContainer"]
pause_mode = 2
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
align = 2
script = ExtResource( 1 )

[node name="Pause" type="Popup" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shade" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modal" type="ColorRect" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -60.0
margin_right = 100.0
margin_bottom = 95.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Pause/Modal"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Modal/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/Modal/MarginContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="Pause/Modal/MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/Modal/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Pause/Modal/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 53.0
margin_bottom = 15.0
text = "Volume:"

[node name="Volume" type="HSlider" parent="Pause/Modal/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 160.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.5

[node name="Spacer2" type="Control" parent="Pause/Modal/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 160.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 5 )

[node name="Resume" type="Button" parent="Pause/Modal/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 160.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
text = "Resume"

[node name="Spacer3" type="Control" parent="Pause/Modal/MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 160.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 5 )

[node name="Quit" type="Button" parent="Pause/Modal/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 160.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
[connection signal="value_changed" from="Pause/Modal/MarginContainer/VBoxContainer/HBoxContainer/Volume" to="Pause" method="_on_Volume_value_changed"]
[connection signal="pressed" from="Pause/Modal/MarginContainer/VBoxContainer/Resume" to="Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/Modal/MarginContainer/VBoxContainer/Quit" to="Pause" method="_on_Quit_pressed"]
